# Qt_Chat

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  proyecto1_Chat.pro
.qt/: QtDeploySupport.cmake
Client/: CMakeLists.txt  Client  Client-1.0.0  Client.pro  Makefile  clientmain.cpp  cmake_install.cmake
Client/Client_autogen/: mocs_compilation.cpp  ui_groupchatwindow.h  ui_mainchatwindow.h
Client/Client_autogen/D2MWKIZDYH/: moc_chatclient.cpp  moc_chatclient.cpp.d  moc_chatwindow.cpp  moc_chatwindow.cpp.d  moc_groupchat.cpp  moc_groupchat.cpp.d  moc_parser.cpp  moc_parser.cpp.d  moc_privatechat.cpp  moc_privatechat.cpp.d
Client/Client_autogen/ZBJRBURQQN/: moc_room.cpp  moc_room.cpp.d
Client/Client_autogen/include/: ui_privatechatwindow.h
Client/Forms/: clientlistitem.ui  mainchatwindow.ui  privatechats.ui
Client/Headers/: chatclient.h  chatwindow.h  groupchat.h  parser.h  privatechat.h  room.h
Client/Sources/: chatclient.cpp  chatwindow.cpp  clientlistitem.cpp  groupchat.cpp  parser.cpp  privatechat.cpp  room.cpp
Client/forms/: client_list_item.ui  groupchatwindow.ui  mainchatwindow.ui  privatechatwindow.ui
Common/: Common.pri  room.cpp  room.h
Server/: CMakeLists.txt  Makefile  Server  Server-1.0.0  Server.pro  cmake_install.cmake  servermain.cpp
Server/Headers/: chatserver.h  parser.h  room.h  serverwindow.h  serverworker.h  user.h
Server/Server_autogen/: moc_predefs.h  mocs_compilation.cpp  ui_serverwindow.h
Server/Server_autogen/D2MWKIZDYH/: moc_chatserver.cpp  moc_chatserver.cpp.d  moc_parser.cpp  moc_parser.cpp.d  moc_room.cpp  moc_room.cpp.d  moc_serverwindow.cpp  moc_serverwindow.cpp.d  moc_serverworker.cpp  moc_serverworker.cpp.d
Server/Server_autogen/ZBJRBURQQN/: moc_room.cpp.d
Server/Sources/: chatserver.cpp  parser.cpp  room.cpp  serverwindow.cpp  serverworker.cpp  user.cpp
doc/html/: annotated.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_1595fba594e4a8b82fcdfaa81a198e93.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_1df3c891844d69b1ee0205976a49fbd0.html  dir_1f1906ff16a765f14a29c2237a2bed5d.html  dir_1f33df1ae8ecf0ab844a2eb207ca9ce3.html  dir_3f07fca67d2afe11f0adea57f71ca29a.html  dir_44f2f02b5120647835b87a5f0cc73c1a.html  dir_4ab6b4cc6a7edbff49100e9123df213f.html  dir_586222727f14be8c1a227924a7550793.html  dir_63e36a08ac26f66d3001cd04b6117bf4.html  dir_64775e9b124f7e7c8c52e844c878a144.html  dir_6e63d70ccb09f10d17a06b28843c9426.html  dir_768fd77007da6f3faecc3508689e6740.html  dir_80a010bbb9d8d4930d048813addc73c3.html  dir_815322fcd01e0e5cff3cac7f216beb31.html  dir_8d966956c1e23f9fff33d9308ab586dc.html  dir_922c588100a187620fdc1533bc178f73.html  dir_a1961369bd149fe475e02c4836a688b6.html  dir_abe194a582f7f79153794368bd9ab084.html  dir_b3ab2daf56883565be1491f0d63000fa.html  dir_c81d8431acdffee4f16088bb15fa04c3.html  dir_d529a780a5d89a0127c0a9a2f0295348.html  dir_d849037bf0e00f749fa36039736e894b.html  dir_de4b2ede27f62f408f72cbcff8edb9e9.html  dir_e063a47bacfeffa6ddbf64aaf2a06864.html  dir_e42b764b8453acb2652931d8a0da220a.html  dir_e469a6c6eb1a608ff8feade2bffd5130.html  dir_f6fbb7f0220f3641be481e8969d544ae.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  pages.html
doc/html/d0/d3f/: class_room-members.html
doc/html/d0/d45/: ui__serverwindow_8h_source.html
doc/html/d0/d53/: include_2ui__mainchatwindow_8h_source.html
doc/html/d0/d54/: class_private_chat.html
doc/html/d0/d68/: ui__groupchatwindow_8h_source.html
doc/html/d1/d3a/: ui__privatechatwindow_8h_source.html
doc/html/d1/db7/: structqt__meta__stringdata___parser__t-members.html
doc/html/d1/dc8/: class_server_window.html
doc/html/d3/dcc/: md__r_e_a_d_m_e.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  files.tex  hierarchy.tex  refman.tex
(+127 files in other folders)
